--- a/css/main.css
+++ b/css/main.css
@@ -6,14 +6,14 @@ body{
     color: #555555;
 }
 .header{
-    background-image: url(../imgs/logo.jpg);
+    background-image: url(../imgs/mainlogo.jpg);
     background-size: cover;
     background-position: center;
     text-align: center;
     height: 90vh;
 }
 .layer{
-    background-color:rgba(0, 0, 0, 0.8);
+    background-color:rgba(157, 4, 4, 0.653);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,12 +60,15 @@ body{
 .singer-box {
     background-color: #e9476a;
     border: 1px solid #e9476a;
-    width: 450px;
+    font-size: 25px;
     cursor: pointer;
+    font-weight: 600;
 }
 .singer-info {
     display: none;
     margin-top: 10px;
+    font-size: 14px;
+    font-weight: 400;
 }
 .numbers{
     background-image: url(../imgs/join\ us.jpg);
