--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,16 @@ body{
 }
 
 .sidebar {
+    height: 100%;
+    width: 0;
     position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
     background-color: #333;
+    overflow-x: hidden;
     transition: 0.5s;
-
+    padding-top: 60px;
 }
 .sidebar a {
     padding: 8px 8px 8px 32px;
