--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,16 @@ body{
     text-align: center;
     height: 90vh;
 }
+#chars {
+    color: red;
+}
+.over-limit {
+    border: 2px solid red;
+    color: red;
+}
+textarea {
+    color: black;
+}
 .bg-grey{
     background-color: rgb(169, 169, 169);
     color: #1a1a1a;
@@ -48,7 +58,13 @@ body{
 .sidebar a:hover {
     color: brown;
 }
+.sidebar .closebtn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 
+    margin-left: auto;
+  }
 .openbtn {
     cursor: pointer;
     padding: 10px 15px;
